Production Ready: Complete WiFi Tracker with React Web App
 Features Added:
-  Professional React web interface at wifitracker.fun
-  Real iPhone Triangulation technology
-  Interactive Google Maps with network pins
-  Modern UI with Aceternity components
-  Google Tag Manager & SEO optimization
-  Serverless architecture on Vercel

 Live Demo: wifitracker.fun
 APIs: Apple WPS integration + Google Maps
 Mobile-optimized with PWA features

--- a/.gitignore
+++ b/.gitignore
@@ -3,18 +3,18 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
 
 # Generated protobuf files
 bssid_pb.js
 
 # Output files
 *.kml
-*.json
 *.tsv
 scanned_wifi_map.kml
 output.json
 output.tsv
+web/node_modules/
+web/dist/
 
 # Editor files
 .vscode/
