--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,19 @@
 {
-  "version": 2,
-  "name": "wifitracker",
-  "builds": [
-    { "src": "api/geolocate.js", "use": "@vercel/node" },
-    { "src": "api/discover-real-bssid.js", "use": "@vercel/node" },
-    { "src": "web/package.json", "use": "@vercel/static-build", "config": { "distDir": "dist" } }
-  ],
-  "routes": [
-    { "src": "/api/geolocate", "dest": "/api/geolocate.js" },
-    { "src": "/api/discover-real-bssid", "dest": "/api/discover-real-bssid.js" },
-    { "src": "/robots.txt", "dest": "/web/dist/robots.txt" },
-    { "src": "/sitemap.xml", "dest": "/web/dist/sitemap.xml" },
-    { "src": "/site.webmanifest", "dest": "/web/dist/site.webmanifest" },
-    { "src": "/(.*)", "dest": "/web/dist/$1" }
+  "buildCommand": "cd web && npm run build",
+  "outputDirectory": "web/dist",
+  "functions": {
+    "api/geolocate.js": {
+      "runtime": "nodejs18.x"
+    },
+    "api/discover-real-bssid.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "rewrites": [
+    { "source": "/robots.txt", "destination": "/web/dist/robots.txt" },
+    { "source": "/sitemap.xml", "destination": "/web/dist/sitemap.xml" },
+    { "source": "/site.webmanifest", "destination": "/web/dist/site.webmanifest" },
+    { "source": "/((?!api).*)", "destination": "/web/dist/$1" }
   ],
   "headers": [
     {
