--- a/vercel.json
+++ b/vercel.json
@@ -1,29 +1,24 @@
 {
-  "buildCommand": "cd web && npm install && npm run build",
-  "outputDirectory": "web/dist",
-  "installCommand": "cd web && npm install",
-  "rewrites": [
-    { "source": "/robots.txt", "destination": "/web/dist/robots.txt" },
-    { "source": "/sitemap.xml", "destination": "/web/dist/sitemap.xml" },
-    { "source": "/site.webmanifest", "destination": "/web/dist/site.webmanifest" },
-    { "source": "/((?!api).*)", "destination": "/web/dist/$1" }
-  ],
-  "headers": [
+  "version": 2,
+  "builds": [
     {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "X-Frame-Options", "value": "DENY" },
-        { "key": "X-Content-Type-Options", "value": "nosniff" },
-        { "key": "X-XSS-Protection", "value": "1; mode=block" },
-        { "key": "Referrer-Policy", "value": "strict-origin-when-cross-origin" }
-      ]
+      "src": "web/package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "dist"
+      }
     },
     {
-      "source": "/static/(.*)",
-      "headers": [
-        { "key": "Cache-Control", "value": "public, max-age=31536000, immutable" }
-      ]
+      "src": "api/**/*.js",
+      "use": "@vercel/node"
     }
+  ],
+  "routes": [
+    { "src": "/robots.txt", "dest": "/web/dist/robots.txt" },
+    { "src": "/sitemap.xml", "dest": "/web/dist/sitemap.xml" },
+    { "src": "/site.webmanifest", "dest": "/web/dist/site.webmanifest" },
+    { "src": "/api/(.*)", "dest": "/api/$1" },
+    { "src": "/(.*)", "dest": "/web/dist/$1" }
   ]
 }
 
